@@ -2,6 +2,8 @@
 package Paws::ElasticBeanstalk::DescribeApplicationVersions;
   use Moose;
   has ApplicationName => (is => 'ro', isa => 'Str');
+  has MaxRecords => (is => 'ro', isa => 'Int');
+  has NextToken => (is => 'ro', isa => 'Str');
   has VersionLabels => (is => 'ro', isa => 'ArrayRef[Str|Undef]');
 
   use MooseX::ClassAttribute;
@@ -39,6 +41,19 @@ Values for attributes that are native types (Int, String, Float, etc) can passed
 If specified, AWS Elastic Beanstalk restricts the returned descriptions
 to only include ones that are associated with the specified
 application.
+
+
+
+=head2 MaxRecords => Int
+
+Specify a maximum number of application versions to paginate in the
+request.
+
+
+
+=head2 NextToken => Str
+
+Specify a next token to retrieve the next page in a paginated request.
 
 
 
